--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,14 @@ description = ""
 authors = ["kureta <skureta@gmail.com>"]
 license = "GPL"
 readme = "README.md"
+packages = [{ include = "ool", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-torch = {version = "^2.4.0+cpu", source = "pytorch-cpu-src"}
-torchvision = {version = "^0.19.0+cpu", source = "pytorch-cpu-src"}
+torch = "^2.4.0"
+torchvision = "^0.19.0"
 numpy = "^2.1.0"
 raylib = "^5.0.0.3"
-
-
-[[tool.poetry.source]]
-name = "pytorch-cpu-src"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
