--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ torch = "^2.4.0"
 torchvision = "^0.19.0"
 numpy = "^2.1.0"
 raylib = "^5.0.0.3"
+imgui = {extras = ["pyglet"], version = "^2.0.0"}
+dearpygui = "^1.11.1"
 
 [build-system]
 requires = ["poetry-core"]
